@@ -2015,10 +2015,8 @@ rb_iseq_parameters(const rb_iseq_t *iseq, int is_proc)
 	    }
 	    rb_ary_push(args, a);
 	}
-	if (rb_id2str(iseq->local_table[iseq->arg_keyword])) {
-	    CONST_ID(keyrest, "keyrest");
-	    rb_ary_push(args, PARAM(iseq->arg_keyword, keyrest));
-	}
+	CONST_ID(keyrest, "keyrest");
+	rb_ary_push(args, PARAM(iseq->arg_keyword, keyrest));
     }
     if (iseq->arg_block != -1) {
 	CONST_ID(block, "block");
