@@ -1,3 +1,8 @@
+Wed Dec 25 20:30:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* iseq.c (rb_iseq_parameters): push argument type symbol only for
+	  unnamed rest keywords argument.
+
 Wed Dec 25 20:28:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* proc.c (rb_iseq_min_max_arity): maximum argument is unlimited if
